# forte_cubes

./: Cargo.toml  Readme.md
assets/: warrior.bbmodel
examples/: multi_cube_anim.rs  multi_cube_lit.rs  multi_cube_no_anim.rs  single_cube.rs  terrain.rs
shaders/: cubes.wgsl  light.wgsl  terrain.wgsl
src/: lib.rs
src/models/: animations.rs  cubes.rs  data.rs  file.rs  mod.rs
src/terrain/: blocks.rs  chunk.rs  lookup.rs  mod.rs
