[package]
name = "forte_cubes"
version = "0.1.0"
edition = "2021"
description = "Cube model and terrain extension for the Forte Engine."
license = "MIT"
exlude = ["assets/"]

[dependencies]
forte_engine = "0.1.2"
wgpu = "0.18"
cgmath = "0.18"
serde = { version = "1.0.195", features = [ "derive" ] }
serde_json = "1.0.111"
bytemuck = { version = "1.14", features = [ "derive" ] }
include-wgsl-oil = "0.2.4"

[dev-dependencies]
winit = "0.28"
pollster = "0.3"